<resources>
    <string name="app_name">FirebaseAuthApp</string>

    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
</resources>
