<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/defaultphoto"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/et_first_name"
        style="@style/viewCustom"
        android:layout_below="@id/ib_profile_pic"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_last_name"
        style="@style/viewCustom"
        android:layout_below="@id/et_first_name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_below="@id/et_last_name"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:background="@color/colorAccent"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>